# WannaResLikeYou

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
Developers/components/: index.html
Developers/getting_started/: index.html
Developers/overview/: index.html
Developers/workflow/: index.html
Users/how_to_cli/: index.html
Users/how_to_deployement/: index.html
Users/how_to_local_app/: index.html
Users/methods/frequency_based/: index.html
Users/methods/interpolations/: index.html
Users/methods/learning_based/: index.html
Users/usage/: index.html
about/: index.html
confs/: interpolation_config.yaml
docs/: index.md
docs/Developers/: components.md  getting_started.md  overview.md  workflow.md
docs/Users/: how_to_deployement.md  how_to_local_app.md  usage.md
docs/Users/methods/: frequency_based.md  interpolations.md  learning_based.md
search/: search_index.json
site/: index.html  sitemap.xml
site/Developers/workflow/: index.html
site/Users/how_to_deployement/: index.html
site/Users/methods/frequency_based/: index.html
site/Users/methods/interpolations/: index.html
site/about/: index.html
site/search/: search_index.json
superresolution/: constants.py  parsing.py  super_resolution.py
superresolution/schemas/: config.py  image.py  methods.py
wannareslikeyou/: constants.py  parsing.py
wannareslikeyou/entrypoints/: interpolate.py
wannareslikeyou/interpolation/: interpolate.py
wannareslikeyou/schemas/: image.py
wannareslikeyou/schemas/tasks/: interpolate.py
(+1 files in other folders)
